--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
     <div class="section2">
         <div class="content1">
-            <h1 class="txt-blue">Digital Markiting Agency</h1>
+            <h2 class="txt-blue">Digital Markiting Agency</h2>
 
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid voluptatibus natus asperiores.
                 Lorem,
@@ -181,7 +181,7 @@
         <div class="main-section bg-grary"></div>
         <div class="section2 bg-grary" id="section-repeate">
             <div class="content1 bg-grary" style="margin: 0;">
-                <h1 class="txt-blue bg-grary">Seo Sevices that dirve bussiness growth</h1>
+                <h2 class="txt-blue bg-grary">Seo Sevices that dirve bussiness growth</h2>
 
 
             </div>
@@ -205,11 +205,14 @@
                         Maecenas nisl est,
                         nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed
                     </span></p>
-                <button onclick="myFunction()" id="myBtn">Read More-> </button>
+
+                <button onclick="myFunction()" class="btn read-more" id="myBtn">Read More-> </button>
+
             </div>
 
             <div class="itembox " id="itembox-2">
-                <span><i class="fa fa-user-o" aria-hidden="true"></i></span>
+                <span><i class="fa fa-info" aria-hidden="true"></i></span>
+
                 <h2 class="txt-blue">Keyword Research</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum
                     interdum, nisi lorem Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis iusto
@@ -220,12 +223,14 @@
                         Maecenas nisl est,
                         nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed
                     </span></p>
-                <button onclick="myFunction()" id="myBtn">Read More-> </button>
+
+                <button onclick="myFunction()" class="btn read-more" id="myBtn">Read More-> </button>
+
             </div>
 
             <div class="itembox " id="itembox-3">
-                <span><i class="fa fa-mobile" aria-hidden="true"></i></span>
-                <h2 class="txt-blue">Link Building</h2>
+                <span><i class="fa fa-user-o" aria-hidden="true"></i></span>
+                <h2 class="txt-blue">From Our Blog</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum
                     interdum, nisi lorem Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis iusto
                     commodi atque.
@@ -235,7 +240,9 @@
                         Maecenas nisl est,
                         nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed
                     </span></p>
-                <button onclick="myFunction()" id="myBtn">Read More-> </button>
+                <button onclick="myFunction()" class="btn read-more" id="myBtn">Read More-> </button>
+
+
             </div>
 
 
@@ -331,7 +338,7 @@
             <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
             <h3 class="txt-blue" style="display: inline-block;">Email Us</h3><br>
             <p>example@mail.com</p>
-            <span><i class="fa fa-globe" aria-hidden="true"></i></span>
+            <span><i class="fa fa-life-ring" aria-hidden="true"></i></span>
             <h3 class="txt-blue" style="display: inline-block;">Customer Support</h3>
 
         </div>
@@ -349,7 +356,7 @@
             <input type="url" placeholder="Website URL*" class="pd">
             <br>
             <br>
-            <textarea name="" id="" cols="31" rows="4" placeholder="Type Your Text Message here*"></textarea><br>
+            <textarea name="" id="" cols="27" rows="4" placeholder="Type Your Text Message here*"></textarea><br>
             <br>
             <button class="btn bg-blue-dark txt-white" id="btn-Message">Send Message</button>
 
@@ -365,17 +372,21 @@
     <footer>
         <div class="footer-container bg-blue txt-white">
             <div class="footerbox" id="footerbox-1">
-                <span><i class="fa fa-envira" aria-hidden="true"></i></span>
+                <span><i class="fa fa-fire" aria-hidden="true"></i></span>
                 <h5 style="display: inline;">SEO Agency</h5><br>
                 <br>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem ipsam asperiores
                 </p>
 
 
-                <h4><span><i class="fa fa-facebook-square" aria-hidden="true"></i></span> <span> </span> <span><i
-                            class="fa fa-linkedin-square" aria-hidden="true"></i></span> <span> </span> <span><i
-                            class="fa fa-instagram" aria-hidden="true"></i></span> <span> </span> <span><i
-                            class="fa fa-twitter-square" aria-hidden="true"></i></span>
+                <h4><span> <a href="https://www.facebook.com"><i class="fa fa-facebook-square" aria-hidden="true"></i>
+                        </a></span> <span>
+                    </span> <span> <a href="https://www.linkedin.com"> <i class="fa fa-linkedin-square"
+                                aria-hidden="true"></i> </a></span>
+                    <span> </span> <span> <a href="https://www.instagram.com"> <i class="fa fa-instagram"
+                                aria-hidden="true"></i> </a></span>
+                    <span> </span> <span> <a href="https://www.twitter.com"><i class="fa fa-twitter-square"
+                                aria-hidden="true"></i> </a></span>
                     <h4>
 
 
