--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     <table class="text-white">
                         <tr>
                             <td>
-                                <span> <a href="">></a> </span> &nbsp;
+                                <span> <a href="">></a> </span>
                             </td>
                             <td>
                                 <a href="" target="_blank"> Digital Markiting</a></td>
@@ -287,7 +287,7 @@
                         <tr></tr>
                         <tr>
                             <td>
-                                <span> <a href="">></a> </span> &nbsp;
+                                <span> <a href="">></a> </span>
                             </td>
                             <td>
                                 <a href="" target="_blank"> Web Development</a>
@@ -296,14 +296,14 @@
                         <td></td>
                         <tr>
                             <td>
-                                <span> <a href="">></a> </span> &nbsp;
+                                <span> <a href="">></a> </span>
                             </td>
                             <td>
                                 <a href="" target="_blank"> Social Media Markiting</a></td>
                         </tr>
                         <tr>
                             <td>
-                                <span> <a href="">></a> </span> &nbsp;
+                                <span> <a href="">></a> </span>
                             </td>
                             <td>
                                 <a href="" target="_blank"> Digital Markiting</a></td>
@@ -311,7 +311,7 @@
                         <tr></tr>
                         <tr>
                             <td>
-                                <span> <a href="">></a> </span> &nbsp;
+                                <span> <a href="">></a> </span>
                             </td>
                             <td>
                                 <a href="" target="_blank"> Web Development</a>
@@ -320,14 +320,14 @@
                         <td></td>
                         <tr>
                             <td>
-                                <span> <a href="">></a> </span> &nbsp;
+                                <span> <a href="">></a> </span>
                             </td>
                             <td>
                                 <a href="" target="_blank"> Social Media Markiting</a></td>
                         </tr>
                         <tr>
                             <td>
-                                <span> <a href="">></a> </span> &nbsp;
+                                <span> <a href="">></a> </span>
                             </td>
                             <td>
                                 <a href="" target="_blank"> Digital Markiting</a></td>
@@ -335,7 +335,7 @@
                         <tr></tr>
                         <tr>
                             <td>
-                                <span> <a href="">></a> </span> &nbsp;
+                                <span> <a href="">></a> </span>
                             </td>
                             <td>
                                 <a href="" target="_blank"> Web Development</a>
@@ -344,7 +344,7 @@
                         <td></td>
                         <tr>
                             <td>
-                                <span> <a href="">></a> </span> &nbsp;
+                                <span> <a href="">></a> </span>
                             </td>
                             <td>
                                 <a href="" target="_blank"> Social Media Markiting</a></td>
@@ -382,63 +382,6 @@
         </div>
 
 
-
-        <!-- <div style="border: 2px solid black; display: flex;     padding: 5px 3rem;">
-            <div class="1" style="border: 2px solid green  ; flex: 1.4 ;">
-                <div>
-                    <h1 class="center ">Our Sevices</h1>
-                </div>
-                <div class="center our-service-pd "><a href="" target="_blank"><span>></span> Digital Markiting</a>
-            </div>
-            <div class="center our-service-pd"><a href="" target="_blank"><span>></span> Web Development</a>
-            </div>
-            <div class="center our-service-pd">
-                <a href="" target="_blank"> <span> ></span> Social Media Markiting
-                </a>
-            </div>
-            <div class="center our-service-pd "><a href="" target="_blank"><span>></span> Digital Markiting</a>
-            </div>
-            <div class="center our-service-pd"><a href="" target="_blank"><span>></span> Web Development</a>
-            </div>
-            <div class="center our-service-pd">
-                <a href="" target="_blank"> <span> ></span> Social Media Markiting
-                </a>
-            </div>
-            <div class="center our-service-pd "><a href="" target="_blank"><span>></span> Digital Markiting</a>
-            </div>
-            <div class="center our-service-pd"><a href="" target="_blank"><span>></span> Web Development</a>
-            </div>
-            <div class="center our-service-pd">
-                <a href="" target="_blank"> <span> ></span> Social Media Markiting
-                </a>
-            </div>
-
-            <br>
-            <br>
-            <br>
-
-        </div>
-
-        <div class="2" style="border: 2px solid yellow ; flex: 3;  padding: 0.5rem;
-    justify-content: space-around;
-    align-items: center;">
-            <div>
-                <h1 class="center ">Our Sevices</h1>
-            </div>
-            <br>
-            <br>
-            <h2 class="txt-blue">Heading Two Goes Here</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam corporis modi debitis architecto? A ad suscipit ipsum laborum accusantium quod dolor, deserunt quidem non vitae corporis velit, nisi voluptatum? Molestiae magnam officia beatae
-                nesciunt.</p>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem quod, aspernatur architecto, tempora dolore amet nemo vel, sapiente harum quidem ratione iusto! Voluptate iusto exercitationem eius, quis culpa, facere suscipit ab odio fugit
-                illum in quasi pariatur libero consectetur sapiente.</p>
-
-            <h2 class="txt-blue">Heading Two Goes Here</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem quod, aspernatur architecto, tempora dolore amet nemo vel, sapiente harum quidem ratione iusto! Voluptate iusto exercitationem eius, quis culpa, facere suscipit ab odio fugit
-                illum in quasi pariatur libero consectetur sapiente.</p>
-        </div>
-    </div> -->
     </div>
 
     </div>
@@ -501,50 +444,6 @@
         </form>
     </div>
 
-
-    <!-- <div style="border: 2px solid black; display: flex; margin: 5px 4rem; flex-wrap: wrap;">
-        <div class="1" style="border: 2px solid red !important; flex: 1; ">
-            <h1 class="txt-blue">Contact Details</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error repellat ipsam harum!</p>
-
-
-
-
-
-            <span><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-            <h3 class="txt-blue" style="display: inline-block;">Company Address</h3><br>
-            <p>Seo Agency , 343 marketing , #2214 cravel street , Ny -62617.</p>
-
-            <span><i class="fa fa-phone" aria-hidden="true"></i></span>
-            <h3 class="txt-blue" style="display: inline-block;">Call Us</h3><br>
-            <p>+1(21)234 567.</p>
-            <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-            <h3 class="txt-blue" style="display: inline-block;">Email Us</h3><br>
-            <p>example@mail.com</p>
-            <span><i class="fa fa-life-ring" aria-hidden="true"></i></span>
-            <h3 class="txt-blue" style="display: inline-block;">Customer Support</h3>
-        </div>
-
-        <div class="2" style="border: 2px solid green !important; flex: 1; text-align:right; margin: 1rem;">
-            <input type="text" placeholder="Your Name*" class="pd" style="padding: 5px 56px;">
-            <br>
-            <br>
-            <input type="email" placeholder="Your Email*" class="pd" style="padding: 5px 56px;">
-            <br>
-            <br>
-            <input type="number" placeholder="Your Phone*" class="pd" style="padding: 5px 56px;">
-            <br>
-            <br>
-            <input type="url" placeholder="Website URL*" class="pd" style="padding: 5px 56px;">
-            <br>
-            <br>
-            <textarea name="" id="" cols="27" rows="4" placeholder="Type Your Text Message here*"
-                style="padding: 5px 55px;"></textarea><br>
-            <br>
-            <div style="text-align: center; padding: 2px 19px;"><button>Send Message</button>
-            </div>
-        </div>
-    </div> -->
 
     <!-- =============================  Contact Form ========================================== -->
     <!-- ==============================Strat Footer ============================================ -->
