--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     <table class="text-white">
                         <tr>
                             <td>
-                                <span> <a href="">></a> </span>
+                                &nbsp; <span> <a href="">></a> </span>
                             </td>
                             <td>
                                 <a href="" target="_blank"> Digital Markiting</a></td>
@@ -287,7 +287,7 @@
                         <tr></tr>
                         <tr>
                             <td>
-                                <span> <a href="">></a> </span>
+                                &nbsp; <span> <a href="">></a> </span>
                             </td>
                             <td>
                                 <a href="" target="_blank"> Web Development</a>
@@ -296,14 +296,14 @@
                         <td></td>
                         <tr>
                             <td>
-                                <span> <a href="">></a> </span>
+                                &nbsp; <span> <a href="">></a> </span>
                             </td>
                             <td>
                                 <a href="" target="_blank"> Social Media Markiting</a></td>
                         </tr>
                         <tr>
                             <td>
-                                <span> <a href="">></a> </span>
+                                &nbsp; <span> <a href="">></a> </span>
                             </td>
                             <td>
                                 <a href="" target="_blank"> Digital Markiting</a></td>
@@ -311,7 +311,7 @@
                         <tr></tr>
                         <tr>
                             <td>
-                                <span> <a href="">></a> </span>
+                                &nbsp; <span> <a href="">></a> </span>
                             </td>
                             <td>
                                 <a href="" target="_blank"> Web Development</a>
@@ -320,14 +320,14 @@
                         <td></td>
                         <tr>
                             <td>
-                                <span> <a href="">></a> </span>
+                                &nbsp; <span> <a href="">></a> </span>
                             </td>
                             <td>
                                 <a href="" target="_blank"> Social Media Markiting</a></td>
                         </tr>
                         <tr>
                             <td>
-                                <span> <a href="">></a> </span>
+                                &nbsp; <span> <a href="">></a> </span>
                             </td>
                             <td>
                                 <a href="" target="_blank"> Digital Markiting</a></td>
@@ -335,7 +335,7 @@
                         <tr></tr>
                         <tr>
                             <td>
-                                <span> <a href="">></a> </span>
+                                &nbsp; <span> <a href="">></a> </span>
                             </td>
                             <td>
                                 <a href="" target="_blank"> Web Development</a>
@@ -344,7 +344,7 @@
                         <td></td>
                         <tr>
                             <td>
-                                <span> <a href="">></a> </span>
+                                &nbsp; <span> <a href="">></a> </span>
                             </td>
                             <td>
                                 <a href="" target="_blank"> Social Media Markiting</a></td>
